--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1" />
     <link rel='shortcut icon' type='image/x-icon' href='../src/images/favicon.png?v=1' />
     <script src="https://kit.fontawesome.com/b7e546ac68.js" crossorigin="anonymous"></script>
-    <title>Innocamp To-Do List App</title>
+    <title>YARMA - ToDo List App</title>
 </head>
 
 <body>
